--- a/app/views/welcomes/index.html.erb
+++ b/app/views/welcomes/index.html.erb
@@ -4,8 +4,8 @@
 <hr />
 
 <div class='center'>
-  <button class='ui button teal users'>View Users</button>
-  <button class='ui button teal create' id="submit">Create New User</button>
+  <button class='btn users'>View Users</button>
+  <button a class="btn" onclick="Materialize.toast('New user added!', 4000)" id="submit">Create New User</button>
 </div>
 
 <hr />
